# my-anchor-token

./: .gitignore  Anchor.toml  Cargo.toml  README.md  lib.rs  package-lock.json  package.json  program_id.json  tsconfig.json
programs/my_solami_token/: Cargo.toml  README.md
programs/my_solami_token/src/: lib.rs  state.rs
tests/: mint_to_lp.rs  my_solami_token.ts
