[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.dependencies]
solana-program = "=1.18.2"
anchor-lang = "=0.30.1"
anchor-spl = { version = "=0.30.1", default-features = false, features = ["token"] }
spl-token = { version = "=4.0.0", default-features = false }
spl-associated-token-account = { version = "=2.3.0", default-features = false }
solana-stake-interface = "=1.18.2"
solana-system-interface = "=1.18.2"
solana-vote-interface = "=1.18.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
